--- a/global.css
+++ b/global.css
@@ -1,3 +1,11 @@
+*{
+    box-sizing: border-box;
+}
+
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
