--- a/home.css
+++ b/home.css
@@ -128,11 +128,21 @@
   background-color: #ccc;
   height: 0;
   padding-bottom: 60%;
-  position: relative;
   border-radius: 20px;
   overflow: hidden;
   margin-bottom: 33px;
+  position: relative;
 }
+.card__img img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .card__name {
   color: #0d1317;
   font-size: 24px;
@@ -157,6 +167,7 @@
 
 .has-arrow:after {
   content: " ⟶";
+  transition: 0.2s all;
 }
 
 .features {
@@ -370,4 +381,55 @@
 
 .services .with-orange-blend::after {
   width: 120px;
+}
+
+.big {
+  display: flex;
+}
+.big > * {
+  flex-basis: 50%;
+}
+
+.big__img {
+  background-image: url("./images/experience-image.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.big__detail {
+  padding: 128px;
+  background: #f58a07;
+}
+.big__title {
+  color: #fff;
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 600;
+  max-width: 530px;
+
+  letter-spacing: -0.03em;
+  margin-bottom: 40px;
+}
+
+.btn--white {
+  background-color: #fff;
+  color: #f58a07;
+}
+
+.has-arrow:hover::after {
+  margin-left: 10px;
+}
+
+.card__img img {
+  filter: grayscale(100%);
+  transition: 0.5s all;
+}
+
+.card:hover .card__img img {
+  filter: grayscale(0);
+}
+
+
+.big{
+  margin-bottom: 128px;
 }
