--- a/global.css
+++ b/global.css
@@ -1,29 +1,54 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,h6,p{
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    font-size: 16px;   
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  font-size: 16px;
 }
 
-ul,li{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+ul,
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-a{
-    text-decoration: none;
-    color: inherit;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.container{
-    width: 1280px;
-    margin: 0 auto;
+.container {
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 30px;
+}
+
+.header__nav ul {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
+.header__nav ul li {
+  font-weight: 500;
 }
