--- a/home.css
+++ b/home.css
@@ -1,21 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 15px;
-  padding-bottom: 30px;
-}
-
-.header__nav ul {
-  display: flex;
-  gap: 32px;
-  align-items: center;
-}
-
-.header__nav ul li {
-  font-weight: 500;
-}
-
 .btn {
   background: #f58a07;
   border-radius: 27px;
@@ -386,9 +368,6 @@
 .big {
   display: flex;
 }
-.big > * {
-  flex-basis: 50%;
-}
 
 .big__img {
   background-image: url("./images/experience-image.png");
@@ -398,15 +377,12 @@
 }
 .big__detail {
   padding: 128px;
-  background: #f58a07;
 }
 .big__title {
   color: #fff;
   font-size: 48px;
   line-height: 56px;
   font-weight: 600;
-  max-width: 530px;
-
   letter-spacing: -0.03em;
   margin-bottom: 40px;
 }
@@ -429,7 +405,30 @@
   filter: grayscale(0);
 }
 
-
-.big{
+.big {
   margin-bottom: 128px;
+  position: relative;
+  background: #f58a07;
+}
+
+.big__img {
+  width: 50%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+}
+
+.big__inner {
+  display: flex;
+}
+
+.big__placeholder {
+  width: 50%;
+  flex-basis: 50%;
+}
+.big__detail {
+  width: 50%;
+  flex-basis: 50%;
+  padding-right: 0;
 }
